--- a/report/report.bib
+++ b/report/report.bib
@@ -271,3 +271,43 @@
   year={1994},
   publisher={SIAM}
 }
+
+@article{fredman1984storing,
+  title={Storing a sparse table with 0 (1) worst case access time},
+  author={Fredman, Michael L and Koml{\'o}s, J{\'a}nos and Szemer{\'e}di, Endre},
+  journal={Journal of the ACM (JACM)},
+  volume={31},
+  number={3},
+  pages={538--544},
+  year={1984},
+  publisher={ACM}
+}
+
+@book{cormen2009introduction,
+  title={Introduction to algorithms},
+  author={Cormen, Thomas H},
+  year={2009},
+  publisher={MIT press}
+}
+
+@article{klein1998fully,
+  title={A fully dynamic approximation scheme for shortest paths in planar graphs},
+  author={Klein, Philip N and Subramanian, Sairam},
+  journal={Algorithmica},
+  volume={22},
+  number={3},
+  pages={235--249},
+  year={1998},
+  publisher={Springer}
+}
+
+@article{aggarwal1987geometric,
+  title={Geometric applications of a matrix-searching algorithm},
+  author={Aggarwal, Alok and Klawe, Maria M and Moran, Shlomo and Shor, Peter and Wilber, Robert},
+  journal={Algorithmica},
+  volume={2},
+  number={1-4},
+  pages={195--208},
+  year={1987},
+  publisher={Springer}
+}
