--- a/report/report.tex
+++ b/report/report.tex
@@ -92,6 +92,8 @@
 % New commands
 \newcommand{\eqdef}{\overset{\mathrm{def}}{=\joinrel=}}
 \newtheorem{thm}{Theorem}
+\newcommand{\comment}[1]{%
+  \text{\phantom{(#1)}} \tag{#1}}
 
 \title{Exact vertex-labeled distance oracles in static and dynamic planar graphs}
 \subtitle{}
