--- a/report/survey.tex
+++ b/report/survey.tex
@@ -45,7 +45,9 @@ results approximate distances. Below, we outline results for exact distance orac
     \hline\hline
     This & $O(n^2/\ell{1/3})$ & $O(n\ell^{2/3})$ & $O(\ell^{1/3})$ \\
     \hline
-    This & TODO & $O(n^{3/2})$ & $O(\text{polylog}(n))$ \\
+    This & $O(n^2)$ & $O(n^{3/2})$ & $O(1)$ \\
+    \hline
+    This & $O(n^{3/2})$ & $O(n^{3/2})$ & $O(\text{polylog}(n))$ \\
     \hline
     Mozes et al. \cite{mozes2015efficient} &
     $O(\varepsilon^{-2}n\lg^3 n\lg (nN))$ & $O(\varepsilon^{-1}n\lg n \lg(nN))$ & $O(\lg
