introduction done + moved notation

--- a/report/dynamicPlanar.tex
+++ b/report/dynamicPlanar.tex
@@ -1,4 +1,4 @@
-\section{Dynamic Oracles in Directed Planar Graphs}\label{oracle3}
+\section{Dynamic Oracles in Directed Planar Graphs}\label{dynamicPlanar}
 In this chapter we show how to extend the oracle from Section \ref{oracle1} to handle
 edge weight changes in \textbf{TODO}. We also show how to extend the oracle from Section
 \ref{oracle2} to support label changes in expected $O(1)$ time.
