--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -1,5 +1,8 @@
-\section{Introduction}\label{sec:introduction}
-Efficient algorithms on networks ... Road mapping .. Graphs. \\
+\section{Introduction}\label{introduction}
+Efficient algorithms on networks are playing an increasing important role today, and many
+networks have structural properties that can be exploited to allow for much faster
+algorithms than those in general graphs. One such class of networks are planar graphs, which have importance within
+areas such as road transportation, computer vision and many more.. \\
 As these networks can be quite large, one problem is constructing a compact \textit{distance
 oracle}, which is a data structure that is able to either give exact or approximate
 shortest paths between two nodes quickly while not taking up too much space. They were
@@ -7,6 +10,40 @@ introduced by Thorup and Zwick \cite{thorup2005approximate}. This problem has si
 extensively studied. However, a variant of this problem
 was introduced by Hermelin et al. \cite{hermelin2011distance}. In the variant, we seek a
 compact distance oracle on \textit{vertex-labeled} graphs. For this scenario, each node has a label (e.g. "gas
-station" or "supermarket") and the oracles answer distance queries between a node and a
-label. This generalizes the normal distance oracle problem since when each node is
-associated with a unique label it is the same problem. \\
+station" or "supermarket") and the oracles answer distance queries between a vertex and
+the nearest vertex with some label $\lambda$. This generalizes the normal distance oracle problem since when each node is
+associated with a unique label it is the same problem.
+When analysing the performance of
+distance oracles, we typically look at three things. The first is \textit{query} time.
+This is the amount of time it takes to return the shortest path between two given
+vertices or the shortest path between a vertex and the nearest $\lambda$-labeled vertex.
+The second is the \textit{space} required. This is the information stored in the data
+structure we have access to at query time. The last is \textit{preprocessing}. This is
+the time it takes to "handle" a graph, as to determine what information we will store
+in the data structure. \\
+\\
+This thesis focuses on vertex-labeled distance oracles in planar graphs that can provide
+exact distances between a vertex and a desired label $\lambda$. In Section \ref{exactPlanar} we
+give two oracles for the static setting. The first oracle described in Section \ref{oracle1}
+exploits the fact that
+the number of labels $\ell$ is less than the number of vertices in the graph $n$. This
+allows us to construct a more compact oracle with smaller query times. Specifically, we
+can in $O(n^2)$ time construct an oracle of size $O(nl^{2/3})$ that answer queries in
+$O(\ell^{1/3})$ time. The second oracle
+in Section \ref{oracle2}, is a more technical oracle, which achieves better query times, but has no dependence
+on $\ell$. This oracle does not work for all distributions of the label set $L$. It can
+in $O(n^{3/2})$ time preprocess a planar graph into an oracle requiring $O(n^{3/2})$
+space that can answer queries in $O(\text{polylog}(n))$ time. \\
+In Section \ref{dynamicPlanar}, we consider the dynamic setting. In Section
+\ref{oracle3}, we extend the first oracle to handle edge
+weight updates in amortized $\tilde{O}(n^{2/3})$ time and still give exact shortest path in subsequent distance queries. In Section \ref{oracle4}, we extend the second oracle to support label
+changes in expected amortized $O(1)$ time. That is, we can change a label $\lambda_i$ to $\lambda_j$ while maintaining
+exact shortest paths.
+
+\subsection{Notation}\label{notation}
+For a graph $G=(V,E)$ with label set $L=\{\lambda_0, \lambda_1, \dots, \lambda_\ell\}$, we define $|V|=n$, $|E|=m$ and $|L|=\ell$. A
+distance $\delta(v,\lambda)$ for a $v\in V$ and $\lambda\in L$ is the distance between
+the node $v$ and the nearest $\lambda$-labeled node. Likewise, we use $\delta(u,v)$ to denote
+the minimal distance between two nodes $u,v\in V$. \\
+We use $Q(v,\lambda)$ or $Q(u,v)$ to denote the queries "What is $\delta(v,\lambda)$?" or
+"What is $\delta(u,v)$?" respectively. \\
