--- a/report/dynamicPlanar.tex
+++ b/report/dynamicPlanar.tex
@@ -5,6 +5,9 @@ edge weight changes in \textbf{TODO}. We also show how to extend the oracle from
 
 \subsection{A dynamic oracle supporting edge weight updates}\label{oracle3}
 
+\indent \textit{Data structure}.
+fkpkfds
+
 
 \subsubsection{Analysis}
 TODO
