--- a/report/report.bib
+++ b/report/report.bib
@@ -311,3 +311,73 @@
   year={1987},
   publisher={Springer}
 }
+
+@inproceedings{klein2002preprocessing,
+  title={Preprocessing an undirected planar network to enable fast approximate distance queries},
+  author={Klein, Philip},
+  booktitle={Proceedings of the thirteenth annual ACM-SIAM symposium on Discrete algorithms},
+  pages={820--827},
+  year={2002},
+  organization={Society for Industrial and Applied Mathematics}
+}
+
+@inproceedings{kawarabayashi2011linear,
+  title={Linear-space approximate distance oracles for planar, bounded-genus and minor-free graphs},
+  author={Kawarabayashi, Ken-ichi and Klein, Philip N and Sommer, Christian},
+  booktitle={International Colloquium on Automata, Languages, and Programming},
+  pages={135--146},
+  year={2011},
+  organization={Springer}
+}
+
+@inproceedings{kawarabayashi2013more,
+  title={More compact oracles for approximate distances in undirected planar graphs},
+  author={Kawarabayashi, Ken-ichi and Sommer, Christian and Thorup, Mikkel},
+  booktitle={Proceedings of the twenty-fourth annual ACM-SIAM symposium on Discrete algorithms},
+  pages={550--563},
+  year={2013},
+  organization={Society for Industrial and Applied Mathematics}
+}
+
+@inproceedings{wulff2016approximate,
+  title={Approximate distance oracles for planar graphs with improved query time-space tradeoff},
+  author={Wulff-Nilsen, Christian},
+  booktitle={Proceedings of the twenty-seventh annual ACM-SIAM symposium on Discrete algorithms},
+  pages={351--362},
+  year={2016},
+  organization={SIAM}
+}
+
+@article{gawrychowski2016improved,
+  title={Improved bounds for shortest paths in dense distance graphs},
+  author={Gawrychowski, Pawe{\l} and Karczmarz, Adam},
+  journal={arXiv preprint arXiv:1602.07013},
+  year={2016}
+}
+
+@inproceedings{italiano2011improved,
+  title={Improved algorithms for min cut and max flow in undirected planar graphs},
+  author={Italiano, Giuseppe F and Nussbaum, Yahav and Sankowski, Piotr and Wulff-Nilsen, Christian},
+  booktitle={Proceedings of the forty-third annual ACM symposium on Theory of computing},
+  pages={313--322},
+  year={2011},
+  organization={ACM}
+}
+
+@inproceedings{kaplan2012submatrix,
+  title={Submatrix maximum queries in Monge matrices and Monge partial matrices, and their applications},
+  author={Kaplan, Haim and Mozes, Shay and Nussbaum, Yahav and Sharir, Micha},
+  booktitle={Proceedings of the twenty-third annual ACM-SIAM symposium on Discrete Algorithms},
+  pages={338--355},
+  year={2012},
+  organization={SIAM}
+}
+
+@inproceedings{abboud2016popular,
+  title={Popular conjectures as a barrier for dynamic planar graph algorithms},
+  author={Abboud, Amir and Dahlgaard, S{\o}ren},
+  booktitle={Foundations of Computer Science (FOCS), 2016 IEEE 57th Annual Symposium on},
+  pages={477--486},
+  year={2016},
+  organization={IEEE}
+}
