--- a/report/undirectedPlanar.tex
+++ b/report/undirectedPlanar.tex
@@ -1,7 +1,7 @@
-\section{Distance Oracles in Undirected Planar Graphs}
-In this chapter, we show how to construct some of the distance oracles described in Section
-\ref{exactPlanar} and \ref{dynamicPlanar} for undirected graphs. This class of graphs are
-easier to handle and can lead to better preprocessing, space and/or query times.
+%\section{Distance Oracles in Undirected Planar Graphs}
+%In this chapter, we show how to construct some of the distance oracles described in Section
+%\ref{exactPlanar} and \ref{dynamicPlanar} for undirected graphs. This class of graphs are
+%easier to handle and can lead to better preprocessing, space and/or query times.
 
-\subsection{An oracle with speed-up preprocessing time}
-Recall the slow preprocessing time for the oracle described in Section \ref{oracle2}.
+%\subsection{An oracle with speed-up preprocessing time}
+%Recall the slow preprocessing time for the oracle described in Section \ref{oracle2}.
