--- a/report/exactPlanar.tex
+++ b/report/exactPlanar.tex
@@ -10,12 +10,13 @@ that does not depend on $\ell$, but has better query times in Section \ref{oracl
 \subsection{A distance oracle depending on $\ell$}\label{oracle1}
 We cannot directly adapt the approach used in \cite{cohen2017fast} and \cite{gawrychowski2017better} to work
 for the vertex-labeled case as it requires us to know the "target" vertex. However,
-depending on $\ell$, we can use the $r$-division alone to show the following:
+depending on $\ell$, we can give a result build upon the $r$-division:
 \begin{thm}\label{thm1}
   There is a distance oracle with space $O(n\ell^{2/3)})$, query time $O(\ell^{1/3})$ and
   preprocessing time $O(n^2/\ell^{1/3})$.
 \end{thm}
-\textit{Data structure}. Given a directed graph $G$, with nonnegative edge lengths and a number of labels $\ell$, we
+\textbf{The data structure}.
+Given a directed graph $G$, with nonnegative edge lengths and a number of labels $\ell$, we
 construct an $r$-division. Remember, we use the $r$-division described in
 \cite{klein2013structured}, which guarantees a constant number of holes in each region
 and ensures the total number of boundary vertices is $O(n/\sqrt{r})$. Each region $R$ then has at most $r$ nodes and $O(\sqrt{r})$
@@ -24,7 +25,8 @@ for all $\lambda \in L$ in a hash table. For all nodes inside $R$, we store the 
 distance to all
 boundary nodes as well as the distance to all labels present in $R$ in a hash table. \\
 \\
-\indent \textit{Query}. Given the query $Q(v, \lambda)$, if $v$ is a boundary node, we can look
+\indent \textbf{Query}
+Given the query $Q(v, \lambda)$, if $v$ is a boundary node, we can look
 up the distance in the hash table for $v$. If $v$ is not a boundary node, look up the
 distances $\delta(u,v)+\delta(u,\lambda)$ for all boundary nodes $u$ and the distance
 $\delta(v,\lambda)$ stored in the hash table for $v$ and return the minimum.
@@ -69,7 +71,7 @@ achieve constant query time, but this would give $O(n\ell)$ space. However, pick
 $r=\ell^{2/3}$ and for $n$ sufficiently large, gives us $O(n^2/\ell^{1/3})$ preprocessing time, $O(n\ell^{2/3})$ space and query time $O(\ell^{1/3})$. This gives us Theorem $\ref{thm1}$.
 
 \subsubsection{The trade-off}
-TODO
+
 
 \subsection{A distance oracle with better query times}\label{oracle2}
 We now present a distance oracle which is actually multiple data structures that perform
